<!--Darshan Prajapati - n01584247-->
<resources>
    <string name="app_name">DarshanLab9</string>
    <string name="app_description">Design Navigation Drawer Application</string>
    <string name="design_by">Design by Darshan Prajapati - n01584247 ©</string>
    <string name="da1">Da1rshan</string>
    <string name="pr2">Pr2ajapati</string>
    <string name="name">Darshan Prajapati</string>
    <string name="humber_mail">n01584247@humber.ca</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open navigation</string>
    <string name="close_nav">Close navigation</string>
    <string name="dar">Dar</string>
    <string name="Pra">Pra</string>
    <string name="options">Options</string>
    <string name="mode">Mode</string>
    <string name="mysharedpref">MySharedPref</string>
    <string name="search_msg">Please enter a search phrase</string>
    <string name="search">Search</string>
    <string name="query">query</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="enter_course_name">Enter course Name</string>
    <string name="enter_course_description">Enter Course Description</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="clear_field" />
    <string name="delete_msg">Data deleted successfully!</string>
    <string name="no_data_to_delete">No data to delete!</string>
    <string name="shared_preferences">shared preferences</string>
    <string name="courses">courses</string>
    <string name="saved_msg">Saved ArrayList to shared preferences!</string>
    <string name="file_name">File Name</string>
    <string name="read_file">Read File</string>
    <string name="write_file">Write File</string>
    <string name="file_contents">File Contents</string>
    <string name="delete_file">Delete File</string>
    <string name="create_file">Create File</string>
    <string name="persistent_file">Persistent File</string>
    <string name="cache_file">Cache File</string>
</resources>