<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrajapatiActivity9">

    <!--edit text for adding course name-->
    <EditText
        android:id="@+id/darEdtCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/darBtnSave"
        android:hint="@string/enter_course_name" />

    <!--edit text for adding course description-->
    <EditText
        android:id="@+id/darEdtCourseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/darEdtCourseName"
        android:layout_marginEnd="4dp"
        android:layout_toStartOf="@id/darBtnAdd"
        android:hint="@string/enter_course_description" />

    <!--button for adding data to recycler view-->
    <Button
        android:id="@+id/darBtnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/darEdtCourseName"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:text="@string/add" />

    <!--button for saving data to shared prefs-->
    <Button
        android:id="@+id/darBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/darBtnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/darBtnSave"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete" />

    <!--recycler view to display our data-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/darRVCourses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/darBtnDelete" />

</RelativeLayout>
